--- a/1 login-page/index.html
+++ b/1 login-page/index.html
@@ -53,7 +53,7 @@ signinBtn.addEventListener('click', handleClick1);
 function handleClick1() {
     if (this.clicked) {
         // Second click action
-        window.location.href = "../2 home-page/index.html"
+        window.location.href = "https://rockyrif.github.io/Project-holders-project-1/2%20home-page/"
         
     } else {
         // First click action
@@ -76,7 +76,7 @@ signupBtn.addEventListener('click', handleClick2);
 function handleClick2() {
     if (this.clicked) {
         // Second click action
-        window.location.href = "../home-page/index.html"
+        window.location.href = "https://rockyrif.github.io/Project-holders-project-1/2%20home-page/"
 
     } else {
         // First click action
