--- a/2 home-page/index.html
+++ b/2 home-page/index.html
@@ -13,7 +13,7 @@
                 <h1>SCHOLARSHIP</h1>
                 <p>Exam application system </p>
 
-                <button><a href="../3 form-page/index.html">Apply Here</a></button>
+                <button><a href="https://rockyrif.github.io/Project-holders-project-1/3%20form-page/">Apply Here</a></button>
             </div>
 
             <div class="right" id="picture"></div>
