--- a/2 home-page/index.html
+++ b/2 home-page/index.html
@@ -1,4 +1,4 @@
-
+<!DOCTYPE html>
 <html>
     <head>
         <title>Home page</title>
@@ -14,7 +14,7 @@
             <div class="left">
                 <p>Grade 5</p>
                 <h1>SCHOLARSHIP</h1>
-                <p>Exam application system </p>
+                <p>Exam application system </p><br>
 
                 <button><a href="https://rockyrif.github.io/Project-holders-project-1/3%20form-page/">Apply Here</a></button>
             </div>
